--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/config-default": "^2.5.0",
-    "@parcel/core": "^2.5.0",
-    "@parcel/transformer-sass": "^2.5.0",
+    "@parcel/config-default": "^2.6.2",
+    "@parcel/core": "^2.6.2",
+    "@parcel/transformer-sass": "^2.6.2",
     "autoprefixer": "^10.4.7",
-    "concurrently": "^7.2.0",
-    "parcel": "^2.5.0",
+    "concurrently": "^7.3.0",
+    "parcel": "^2.6.2",
     "parcel-bundler": "^1.12.5",
     "postcss": "^8.4.14",
     "postcss-color-function": "^4.1.0",
     "postcss-import": "^14.1.0",
-    "postcss-mixins": "^9.0.2",
+    "postcss-mixins": "^9.0.3",
     "postcss-nested": "^5.0.6",
     "postcss-simple-vars": "^6.0.3",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.1.6"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
